tests/compile-fail/generator-pinned-moved.stderr
error: Undefined Behavior: pointer to alloc974 was dereferenced after this allocation got freed
  --> $DIR/generator-pinned-moved.rs:14:9
   |
14 |         *num += 1; //~ ERROR dereferenced after this allocation got freed
   |         ^^^^^^^^^ pointer to alloc974 was dereferenced after this allocation got freed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside closure at $DIR/generator-pinned-moved.rs:14:9
note: inside `<GeneratorIteratorAdapter<[static generator@$DIR/generator-pinned-moved.rs:9:5: 15:6]> as std::iter::Iterator>::next` at $DIR/generator-pinned-moved.rs:28:15
  --> $DIR/generator-pinned-moved.rs:28:15
   |
28 |         match me.resume(()) {
   |               ^^^^^^^^^^^^^
   = note: inside `<std::boxed::Box<GeneratorIteratorAdapter<[static generator@$DIR/generator-pinned-moved.rs:9:5: 15:6]>> as std::iter::Iterator>::next` at /home/ubuntu/.rustup/toolchains/miri/lib/rustlib/src/rust/library/alloc/src/boxed.rs:1787:9
note: inside `main` at $DIR/generator-pinned-moved.rs:43:5
  --> $DIR/generator-pinned-moved.rs:43:5
   |
43 |     generator_iterator_2.next(); // and use moved value
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

